<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@android:color/background_light">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@android:color/background_dark">
        <TableRow
            android:background="@color/white">
            <TextView
                android:layout_width="14dp"
                android:layout_height="wrap_content"
                android:text="@string/col1"
                android:textColor="@android:color/black"
                android:padding="10sp"
                android:textSize="14sp"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal">
            </TextView>
            <TextView
                android:layout_width="14dp"
                android:layout_height="wrap_content"
                android:text="@string/col2"
                android:textColor="@android:color/black"
                android:padding="10sp"
                android:textSize="14sp"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal">
            </TextView>
            <TextView
                android:layout_width="14dp"
                android:layout_height="wrap_content"
                android:text="@string/col3"
                android:textColor="@android:color/black"
                android:padding="10sp"
                android:textSize="14sp"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal">
            </TextView>
            <TextView
                android:layout_width="14dp"
                android:layout_height="wrap_content"
                android:text="@string/col4"
                android:textColor="@android:color/black"
                android:padding="10sp"
                android:textSize="14sp"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal">
            </TextView>
        </TableRow>
        <TableRow
            android:background="@color/white">
            <TextView
                android:layout_width="14dp"
                android:layout_height="wrap_content"
                android:text="@string/row1"
                android:textColor="@android:color/black"
                android:padding="10sp"
                android:textSize="11sp"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal">
            </TextView>
            <TextView
                android:layout_width="14dp"
                android:layout_height="wrap_content"
                android:text="@string/row2"
                android:textColor="@android:color/black"
                android:padding="10sp"
                android:textSize="11sp"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal">
            </TextView>
            <TextView
                android:layout_width="14dp"
                android:layout_height="wrap_content"
                android:text="@string/row3"
                android:textColor="@android:color/black"
                android:padding="10sp"
                android:textSize="11sp"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal">
            </TextView>
            <TextView
                android:layout_width="14dp"
                android:layout_height="wrap_content"
                android:text="@string/row4"
                android:textColor="@android:color/black"
                android:padding="10sp"
                android:textSize="11sp"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal">
            </TextView>
        </TableRow>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:text="@string/button1"
            android:textColor="@android:color/black">
        </Button>
    </TableLayout>
</RelativeLayout>